<resources>
    <string name="app_name">Parent</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation list-->
    <string name="nav_home">\uf015  Home</string>
    <string name="nav_notification">\uf0a2  Notification</string>
    <string name="nav_simply_track">\uf041  Simply Track</string>
    <string name="nav_add_phone">\uf095  Add Mobile</string>
    <string name="nav_routes">\uf018  Routes</string>
    <string name="nav_logout">\uf09c  Logout</string>


    <!-- end list -->
    <string name="overview">Overview</string>
    <string name="notification">Notification</string>
    <string name="add_phone_no">Add Phone Number</string>
    <string name="school_info">School Info</string>
    <string name="simply_track">Simply Track</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="home">Home</string>
    <string name="set_up">Set Up</string>

    <!-- Tabs -->
    <string name="children">Children</string>
    <string name="tracking">Tracking</string>

    <!-- Helper string -->
    <string name="drop">Drop</string>
    <string name="pickup">Pick Up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="continue_">Continue</string>
    <string name="re_password">Retype Password</string>
    <string name="mobile_no">Mobile No</string>
    <string name="routes">Routes</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_text">Please enter your mobile number registered with school</string>
    <string name="simply_track_message">For security purpose all information can not be viewed!</string>
    <string name="register_new_number_text">Enter new mobile number to be linked with your account</string>
    <string name="register_1">Step 1/3</string>
    <string name="register_2">Step 2/3</string>
    <string name="register_3">Step 3/3</string>
    <string name="school_code">School Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="name">Full Name</string>
    <string name="enter_new_number">Enter New Mobile No.</string>
    <string name="register_new_number">Register Number</string>

    <!-- GCM -->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <!-- Messages -->
    <string name="login_wrong_password">Wrong password</string>
    <string name="login_authenticating_user">Authenticating user</string>
    <string name="title_activity_crop_image">Crop Image</string>

    <!-- Crop Image -->
    <string-array name="showGuidelinesArray">
        <item>Guidelines=Off</item>
        <item>Guidelines=On Touch</item>
        <item>Guidelines=On</item>
    </string-array>
</resources>
