<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sevenre.trackre.parent.fragment.AddMobileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_new_number"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/login_title"
        android:layout_marginBottom="40dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_new_number_text"
        android:gravity="center"
        android:textColor="@color/login_message"
        android:layout_marginBottom="40dp"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/enter_new_number"
        android:background="@color/white"
        android:id="@+id/login_name"
        android:padding="@dimen/padding_login_edit_text"
        android:gravity="center"
        android:maxLength="10"
        android:layout_marginBottom="@dimen/margin_login_input_field"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:padding="@dimen/padding_login_edit_text"
        android:hint="@string/password"
        android:gravity="center"
        android:id="@+id/login_password"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/margin_login_input_field"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:padding="@dimen/padding_login_edit_text"
        android:hint="@string/re_password"
        android:gravity="center"
        android:id="@+id/login_re_password"
        android:background="@color/white" />


    <Button
        android:id="@+id/login_continue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        style="@style/Material.Drawable.Ripple.Wave.Light"
        android:layout_marginTop="@dimen/margin_login_forward_button"
        android:background="@color/login_forward_button" />


</LinearLayout>
