<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_fragment_background"
    tools:context="com.sevenre.trackre.parent.fragment.LoginFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/login_title"
        android:layout_margin="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_2"
        android:gravity="center"
        android:id="@+id/textView2"
        android:textColor="@color/login_message"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/mobile_no"
        android:background="@color/white"
        android:id="@+id/login_phone"
        android:padding="@dimen/padding_login_edit_text"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_login_input_field"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:padding="@dimen/padding_login_edit_text"
        android:hint="@string/verification_code"
        android:gravity="center"
        android:id="@+id/login_verification"
        android:background="@color/white" />

    <Button
        android:id="@+id/login_continue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        style="@style/Material.Drawable.Ripple.Wave.Light"
        android:background="@color/login_forward_button"
        android:layout_marginTop="@dimen/margin_login_forward_button"/>

</LinearLayout>
