<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_fragment_background"
    tools:context="com.sevenre.trackre.parent.fragment.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/login_title"
        android:layout_margin="10dp"
        android:alpha="2"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_text"
        android:gravity="center"
        android:textColor="@color/login_message"
        android:id="@+id/textView3"
        android:layout_marginBottom="35dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/mobile_no"
        android:background="@color/white"
        android:id="@+id/login_phone"
        android:padding="@dimen/padding_login_edit_text"
        android:layout_marginBottom="@dimen/margin_login_input_field"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:padding="@dimen/padding_login_edit_text"
        android:hint="@string/password"
        android:id="@+id/login_password"
        android:background="@color/white" />

    <TextView
        android:id="@+id/login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/login_message"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        style="@style/Material.Drawable.Ripple.Wave.Light"
        android:background="@color/transparent"/>


    <Button
        android:id="@+id/login_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        style="@style/Material.Drawable.Ripple.Wave.Light"
        android:background="@color/login_forward_button"
        android:layout_marginTop="@dimen/margin_login_forward_button"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            style="@style/Material.Drawable.Ripple.Wave.Light" />

        <Button
            android:id="@+id/login_simply_track"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/simply_track"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            style="@style/Material.Drawable.Ripple.Wave.Light" />
    </LinearLayout>
</LinearLayout>