<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_fragment_background"
    tools:context="com.sevenre.trackre.parent.fragment.LoginFragment">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/school_code"
        android:background="@color/white"
        android:id="@+id/login_phone"
        android:padding="@dimen/padding_login_edit_text"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_login_input_field"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/login_continue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        style="@style/Material.Drawable.Ripple.Wave.Light"
        android:background="@color/login_forward_button"
        android:layout_below="@+id/login_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/simply_track"
        android:gravity="center"
        android:textColor="@color/login_message"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/simply_track_message"
        android:gravity="center"
        android:textColor="@color/login_message"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
